aria_core/include/kernels.h

/* ── LayerNorm ────────────────────────────────────────────────────── */
void aria_layernorm_f32(const float *x, const float *weight, const float *bias,
                        float *y, int64_t batch, int64_t dim, float eps);
/* ── Backward (gradient) kernels ─────────────────────────────────── */

/* Unary backward: grad_in = f'(input_or_output) * grad_out */
void aria_relu_backward_f32(const float *grad_out, const float *input,
                             float *grad_in, int64_t n);
void aria_sigmoid_backward_f32(const float *grad_out, const float *output,
                                float *grad_in, int64_t n);
void aria_tanh_backward_f32(const float *grad_out, const float *output,
                             float *grad_in, int64_t n);
void aria_gelu_backward_f32(const float *grad_out, const float *input,
                             float *grad_in, int64_t n);
void aria_silu_backward_f32(const float *grad_out, const float *input,
                             float *grad_in, int64_t n);
/* Binary backward: compute gradients w.r.t. both inputs */
void aria_add_backward_f32(const float *grad_out,
                            float *grad_a, float *grad_b, int64_t n);
void aria_mul_backward_f32(const float *grad_out,
                            const float *a, const float *b,
                            float *grad_a, float *grad_b, int64_t n);
void aria_sub_backward_f32(const float *grad_out,
                            float *grad_a, float *grad_b, int64_t n);
/**
 * Matmul backward: C = A[M,K] @ B[K,N]
 * grad_A[M,K] = grad_out[M,N] @ B^T[N,K]
 * grad_B[K,N] = A^T[K,M] @ grad_out[M,N]
 */
void aria_matmul_backward_f32(const float *grad_out,
                               const float *A, const float *B,
                               float *grad_A, float *grad_B,
                               int64_t M, int64_t K, int64_t N);
/**
 * LayerNorm backward.
 * grad_gamma[dim], grad_beta[dim] accumulated across batch.
 * grad_in[batch, dim] = gradient w.r.t. input.
 */
void aria_layernorm_backward_f32(const float *grad_out, const float *input,
                                  const float *gamma,
                                  float *grad_in, float *grad_gamma,
                                  float *grad_beta,
                                  int64_t batch, int64_t dim, float eps);
/**
 * RMSNorm backward.
 * grad_gamma[dim] accumulated across batch.
 * grad_in[batch, dim] = gradient w.r.t. input.
 */
void aria_rmsnorm_backward_f32(const float *grad_out, const float *input,
                                const float *gamma,
                                float *grad_in, float *grad_gamma,
                                int64_t batch, int64_t dim, float eps);
void aria_depth_weighted_proj_f32(const float *x,
                                  const float *depth_scorer,
                                  const float *step_projs,
                                  float *y,
                                  int64_t batch,
                                  int64_t seq,
                                  int64_t dim,
                                  int64_t max_depth);
void aria_selective_scan_compiled_f32(const float *x,
                                      const float *A_log,
                                      const float *dt_proj,
                                      const float *B_weight,
                                      const float *C_weight,
                                      float *y,
                                      int64_t batch,
                                      int64_t seq,
                                      int64_t dim);
void aria_selective_scan_compiled_backward_f32(const float *grad_out,
                                               const float *x,
                                               const float *A_log,
                                               const float *dt_proj,
                                               const float *B_weight,
                                               const float *C_weight,
                                               float *grad_x,
                                               float *grad_A_log,
                                               float *grad_dt_proj,
                                               float *grad_B_weight,
                                               float *grad_C_weight,
                                               int64_t batch,
                                               int64_t seq,
                                               int64_t dim);
void aria_state_space_compiled_f32(const float *x,
                                   const float *ssm_A,
                                   const float *ssm_B_weight,
                                   const float *ssm_C_weight,
                                   const float *ssm_D,
                                   const float *ssm_dt_weight,
                                   const float *ssm_dt_bias,
                                   float *y,
                                   int64_t batch,
                                   int64_t seq,
                                   int64_t dim,
                                   int64_t state_dim);
void aria_state_space_compiled_backward_f32(const float *grad_out,
                                            const float *x,
                                            const float *ssm_A,
                                            const float *ssm_B_weight,
                                            const float *ssm_C_weight,
                                            const float *ssm_D,
                                            const float *ssm_dt_weight,
                                            const float *ssm_dt_bias,
                                            float *grad_x,
                                            float *grad_ssm_A,
                                            float *grad_ssm_B_weight,
                                            float *grad_ssm_C_weight,
                                            float *grad_ssm_D,
                                            float *grad_ssm_dt_weight,
                                            float *grad_ssm_dt_bias,
                                            int64_t batch,
                                            int64_t seq,
                                            int64_t dim,
                                            int64_t state_dim);
void aria_gated_delta_compiled_f32(const float *x,
                                   const float *q_weight,
                                   const float *k_weight,
                                   const float *v_weight,
                                   const float *alpha_weight,
                                   const float *beta_weight,
                                   const float *o_weight,
                                   float *y,
                                   int64_t batch,
                                   int64_t seq,
                                   int64_t dim,
                                   int64_t n_heads);
void aria_gated_delta_compiled_backward_f32(const float *grad_out,
                                            const float *x,
                                            const float *q_weight,
                                            const float *k_weight,
                                            const float *v_weight,
                                            const float *alpha_weight,
                                            const float *beta_weight,
                                            const float *o_weight,
                                            float *grad_x,
                                            float *grad_q_weight,
                                            float *grad_k_weight,
                                            float *grad_v_weight,
                                            float *grad_alpha_weight,
                                            float *grad_beta_weight,
                                            float *grad_o_weight,
                                            int64_t batch,
                                            int64_t seq,
                                            int64_t dim,
                                            int64_t n_heads);
/* Clifford */
void aria_rotor_transform_f32(const float *x, const float *rotor, float *y,
                                int64_t batch, int64_t dim);
void aria_grade_select_f32(const float *x, float *y,
                             int64_t batch, int64_t dim, int32_t grade);
void aria_grade_mix_f32(const float *x, const float *alpha, float *y,
                          int64_t batch, int64_t dim);
void aria_clifford_attention_f32(const float *x, float *y,
                                   int64_t batch, int64_t seq, int64_t dim);
/* Clifford Cl30 specific */
void aria_clifford_geometric_product_cl30_f32(const float *a, const float *b, float *y, int64_t n);
/** Causal multi-head QKV attention with output projection.
 *  x: [batch, seq, dim], W*: [dim, dim], y: [batch, seq, dim] */
void aria_softmax_attention_f32(const float *x,
                                 const float *Wq, const float *Wk,
                                 const float *Wv, const float *Wo,
                                 float *y,
                                 int64_t batch, int64_t seq,
                                 int64_t dim, int64_t n_heads);
void aria_softmax_attention_backward_f32(const float *grad_out,
                                         const float *x,
                                         const float *Wq,
                                         const float *Wk,
                                         const float *Wv,
                                         const float *Wo,
                                         float *grad_x,
                                         float *grad_Wq,
                                         float *grad_Wk,
                                         float *grad_Wv,
                                         float *grad_Wo,
                                         int64_t batch,
                                         int64_t seq,
                                         int64_t dim,
                                         int64_t n_heads);
/** Linear attention kernel surface currently exported for direct native use. */
void aria_linear_attention_f32(const float *x,
                                const float *Wq, const float *Wk,
                                const float *Wv, const float *Wo, float *y,
                                int64_t batch, int64_t seq, int64_t dim);
void aria_rwkv_time_mixing_backward_f32(const float *grad_out,
                                        const float *x,
                                        const float *w_decay,
                                        const float *u_bonus,
                                        const float *W_k,
                                        const float *W_v,
                                        const float *W_r,
                                        float *grad_x,
                                        float *grad_w_decay,
                                        float *grad_u_bonus,
                                        float *grad_W_k,
                                        float *grad_W_v,
                                        float *grad_W_r,
                                        int64_t batch,
                                        int64_t seq,
                                        int64_t dim);
/** Gated linear backward */
void aria_gated_linear_backward_f32(const float *grad_out,
                                      const float *x, const float *W, const float *W_gate,
                                      const float *gate_sigmoid,
                                      float *grad_x, float *grad_W, float *grad_W_gate,
                                      float *grad_b, float *grad_b_gate,
                                      int64_t batch, int64_t dim_in, int64_t dim_out);