research/runtime/native/rust/aria-scheduler/src/ffi.rs


    pub fn aria_rotor_transform_f32(
        x: *const f32,
        rotor: *const f32,
        y: *mut f32,
        batch: i64,
        dim: i64,
    );
    pub fn aria_grade_select_f32(x: *const f32, y: *mut f32, batch: i64, dim: i64, grade: i32);
    pub fn aria_grade_mix_f32(x: *const f32, alpha: *const f32, y: *mut f32, batch: i64, dim: i64);
    pub fn aria_clifford_attention_f32(x: *const f32, y: *mut f32, batch: i64, seq: i64, dim: i64);
    pub fn aria_clifford_geometric_product_cl30_f32(
        a: *const f32,
        b: *const f32,
        y: *mut f32,
        n_multivectors: i64,
    );
    pub fn aria_softmax_attention_f32(
        x: *const f32,
        wq: *const f32,
        wk: *const f32,
        wv: *const f32,
        wo: *const f32,
        y: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        n_heads: i64,
    );
    pub fn aria_linear_attention_f32(
        x: *const f32,
        wq: *const f32,
        wk: *const f32,
        wv: *const f32,
        wo: *const f32,
        y: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
    );
    pub fn aria_depth_weighted_proj_f32(
        x: *const f32,
        depth_scorer: *const f32,
        step_projs: *const f32,
        y: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        max_depth: i64,
    );
    pub fn aria_selective_scan_compiled_f32(
        x: *const f32,
        a_log: *const f32,
        dt_proj: *const f32,
        b_weight: *const f32,
        c_weight: *const f32,
        y: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
    );
    pub fn aria_state_space_compiled_f32(
        x: *const f32,
        ssm_a: *const f32,
        ssm_b_weight: *const f32,
        ssm_c_weight: *const f32,
        ssm_d: *const f32,
        ssm_dt_weight: *const f32,
        ssm_dt_bias: *const f32,
        y: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        state_dim: i64,
    );
    pub fn aria_gated_delta_compiled_f32(
        x: *const f32,
        q_weight: *const f32,
        k_weight: *const f32,
        v_weight: *const f32,
        alpha_weight: *const f32,
        beta_weight: *const f32,
        o_weight: *const f32,
        y: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        n_heads: i64,
    );
    pub fn aria_selective_scan_compiled_backward_f32(
        grad_out: *const f32,
        x: *const f32,
        a_log: *const f32,
        dt_proj: *const f32,
        b_weight: *const f32,
        c_weight: *const f32,
        grad_x: *mut f32,
        grad_a_log: *mut f32,
        grad_dt_proj: *mut f32,
        grad_b_weight: *mut f32,
        grad_c_weight: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
    );
    pub fn aria_state_space_compiled_backward_f32(
        grad_out: *const f32,
        x: *const f32,
        ssm_a: *const f32,
        ssm_b_weight: *const f32,
        ssm_c_weight: *const f32,
        ssm_d: *const f32,
        ssm_dt_weight: *const f32,
        ssm_dt_bias: *const f32,
        grad_x: *mut f32,
        grad_ssm_a: *mut f32,
        grad_ssm_b_weight: *mut f32,
        grad_ssm_c_weight: *mut f32,
        grad_ssm_d: *mut f32,
        grad_ssm_dt_weight: *mut f32,
        grad_ssm_dt_bias: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        state_dim: i64,
    );
    pub fn aria_gated_delta_compiled_backward_f32(
        grad_out: *const f32,
        x: *const f32,
        q_weight: *const f32,
        k_weight: *const f32,
        v_weight: *const f32,
        alpha_weight: *const f32,
        beta_weight: *const f32,
        o_weight: *const f32,
        grad_x: *mut f32,
        grad_q_weight: *mut f32,
        grad_k_weight: *mut f32,
        grad_v_weight: *mut f32,
        grad_alpha_weight: *mut f32,
        grad_beta_weight: *mut f32,
        grad_o_weight: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        n_heads: i64,
    );
    pub fn aria_layernorm_f32(
        x: *const f32,
        weight: *const f32,
        bias: *const f32,
        y: *mut f32,
        batch: i64,
        dim: i64,
        eps: f32,
    );
    pub fn aria_layernorm_backward_f32(
        grad_out: *const f32,
        input: *const f32,
        gamma: *const f32,
        grad_in: *mut f32,
        grad_gamma: *mut f32,
        grad_beta: *mut f32,
        batch: i64,
        dim: i64,
        eps: f32,
    );

    // ── Backward (gradient) kernels ──────────────────────────────────
    // Unary backward kernels: grad_out, input_or_output, grad_in, n
    pub fn aria_relu_backward_f32(
        grad_out: *const f32,
        input: *const f32,
        grad_in: *mut f32,
        n: i64,
    );
    pub fn aria_sigmoid_backward_f32(
        grad_out: *const f32,
        output: *const f32,
        grad_in: *mut f32,
        n: i64,
    );
    pub fn aria_tanh_backward_f32(
        grad_out: *const f32,
        output: *const f32,
        grad_in: *mut f32,
        n: i64,
    );
    pub fn aria_gelu_backward_f32(
        grad_out: *const f32,
        input: *const f32,
        grad_in: *mut f32,
        n: i64,
    );
    pub fn aria_silu_backward_f32(
        grad_out: *const f32,
        input: *const f32,
        grad_in: *mut f32,
        n: i64,
    );
    pub fn aria_rmsnorm_backward_f32(
        grad_out: *const f32,
        input: *const f32,
        gamma: *const f32,
        grad_in: *mut f32,
        grad_gamma: *mut f32,
        batch: i64,
        dim: i64,
        eps: f32,
    );

    // Binary backward kernels
    pub fn aria_add_backward_f32(grad_out: *const f32, grad_a: *mut f32, grad_b: *mut f32, n: i64);
    pub fn aria_mul_backward_f32(
        grad_out: *const f32,
        a: *const f32,
        b: *const f32,
        grad_a: *mut f32,
        grad_b: *mut f32,
        n: i64,
    );
    pub fn aria_sub_backward_f32(grad_out: *const f32, grad_a: *mut f32, grad_b: *mut f32, n: i64);

    // Matmul backward: C = A[M,K] @ B[K,N]
    pub fn aria_matmul_backward_f32(
        grad_out: *const f32,
        a: *const f32,
        b: *const f32,
        grad_a: *mut f32,
        grad_b: *mut f32,
        m: i64,
        k: i64,
        n: i64,
    );
    pub fn aria_softmax_attention_backward_f32(
        grad_out: *const f32,
        x: *const f32,
        wq: *const f32,
        wk: *const f32,
        wv: *const f32,
        wo: *const f32,
        grad_x: *mut f32,
        grad_wq: *mut f32,
        grad_wk: *mut f32,
        grad_wv: *mut f32,
        grad_wo: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
        n_heads: i64,
    );
    pub fn aria_gated_linear_backward_f32(
        grad_out: *const f32,
        x: *const f32,
        w: *const f32,
        w_gate: *const f32,
        gate_sigmoid: *const f32,
        grad_x: *mut f32,
        grad_w: *mut f32,
        grad_w_gate: *mut f32,
        grad_b: *mut f32,
        grad_b_gate: *mut f32,
        batch: i64,
        dim_in: i64,
        dim_out: i64,
    );
    pub fn aria_rwkv_time_mixing_backward_f32(
        grad_out: *const f32,
        x: *const f32,
        w_decay: *const f32,
        u_bonus: *const f32,
        w_k: *const f32,
        w_v: *const f32,
        w_r: *const f32,
        grad_x: *mut f32,
        grad_w_decay: *mut f32,
        grad_u_bonus: *mut f32,
        grad_w_k: *mut f32,
        grad_w_v: *mut f32,
        grad_w_r: *mut f32,
        batch: i64,
        seq: i64,
        dim: i64,
    );

    // Profiler ABI (profile_abi.h)
    pub fn np_profiler_enable(enable: i32);
    pub fn np_profiler_enabled() -> i32;
    pub fn np_clock_ns() -> i64;
    pub fn np_reset_counters();
    pub fn np_event_count() -> i32;
    pub fn np_drain_events(out: *mut NpEvent, max_out: i32) -> i32;
    pub fn np_emit_event(evt: *const NpEvent);
    pub fn np_get_peak_memory() -> i64;
    pub fn np_memory_event_count() -> i32;
    pub fn np_drain_memory_events(out: *mut NpMemoryEvent, max_out: i32) -> i32;
}

/// Mirrors np_event_t from profile_abi.h.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct NpEvent {
    pub event_name: *const c_char,
    pub op_name: *const c_char,
    pub node_id: i32,
    pub start_ns: i64,
    pub end_ns: i64,
    pub thread_id: i32,
}

/// Mirrors np_memory_event_t from profile_abi.h.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct NpMemoryEvent {
    pub tag: *const c_char,
    pub bytes_allocated: i64,
    pub bytes_freed: i64,
    pub peak_bytes: i64,
    pub timestamp_ns: i64,
}
